Updated to work for CS V13 @ VC"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ project (EX01-HelloWorld)
 set(SOURCE_PREFIX "helloworld")
 set(EXEC_NAME "HelloWorld")
 
-if(EXISTS ${CMAKE_HOME_DIRECTORY}/cs140/CMakeLists.txt)
-    include(cs140/CMakeLists.txt)
+if(EXISTS ${CMAKE_HOME_DIRECTORY}/csv13-lib/CMakeLists.txt)
+    include(csv13-lib/CMakeLists.txt)
 else()
     add_custom_target(submodule-init ALL git submodule init COMMAND git submodule update --recursive WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
 endif()
